<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_category_show"
    android:background="@color/bw_color_white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bw_color_white"
        android:padding="20dp">

        <com.simplysmart.providesk.custom.CustomButtonView
            android:id="@+id/btn_electrical"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="@dimen/icon_margin_helpdesk"
            android:layout_toStartOf="@+id/btn_civilwork"
            android:tag="Electrical"
            custom:caption_padding="@integer/caption_padding"
            custom:caption_text_size="@integer/caption_text_size"
            custom:icon_padding="@integer/icon_padding"
            custom:icon_text_size="@integer/icon_text_size"
            custom:selected="false"
            custom:text_caption="@string/txt_electrical"
            custom:text_icon="@string/icon_electricity">

        </com.simplysmart.providesk.custom.CustomButtonView>

        <com.simplysmart.providesk.custom.CustomButtonView
            android:id="@+id/btn_civilwork"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/icon_margin_helpdesk"
            android:tag="Civilwork"
            custom:caption_padding="@integer/caption_padding"
            custom:caption_text_size="@integer/caption_text_size"
            custom:icon_padding="@integer/icon_padding"
            custom:icon_text_size="@integer/icon_text_size"
            custom:selected="false"
            custom:text_caption="@string/txt_civil_work"
            custom:text_icon="@string/icon_civil">

        </com.simplysmart.providesk.custom.CustomButtonView>


        <com.simplysmart.providesk.custom.CustomButtonView
            android:id="@+id/btn_water"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="@dimen/icon_margin_helpdesk"
            android:layout_toEndOf="@+id/btn_civilwork"
            android:tag="Water"
            custom:caption_padding="@integer/caption_padding"
            custom:caption_text_size="@integer/caption_text_size"
            custom:icon_padding="@integer/icon_padding"
            custom:icon_text_size="@integer/icon_text_size"
            custom:selected="false"
            custom:text_caption="@string/txt_water"
            custom:text_icon="@string/icon_water">

        </com.simplysmart.providesk.custom.CustomButtonView>

        <com.simplysmart.providesk.custom.CustomButtonView
            android:id="@+id/btn_cabletv"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/btn_electrical"
            android:layout_margin="@dimen/icon_margin_helpdesk"
            android:layout_toStartOf="@+id/btn_citizen_billing"
            android:tag="Cable TV"
            custom:caption_padding="@integer/caption_padding"
            custom:caption_text_size="@integer/caption_text_size"
            custom:icon_padding="@integer/icon_padding"
            custom:icon_text_size="@integer/icon_text_size"
            custom:selected="false"
            custom:text_caption="@string/txt_cable_tv"
            custom:text_icon="@string/icon_dth">

        </com.simplysmart.providesk.custom.CustomButtonView>

        <com.simplysmart.providesk.custom.CustomButtonView
            android:id="@+id/btn_citizen_billing"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/btn_civilwork"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/icon_margin_helpdesk"
            android:tag="Citizen’s Billing"
            custom:caption_padding="@integer/caption_padding"
            custom:caption_text_size="@integer/caption_text_size"
            custom:icon_padding="@integer/icon_padding"
            custom:icon_text_size="@integer/icon_text_size"
            custom:selected="false"
            custom:text_caption="@string/txt_citizen_billing"
            custom:text_icon="@string/icon_billing">

        </com.simplysmart.providesk.custom.CustomButtonView>


        <com.simplysmart.providesk.custom.CustomButtonView
            android:id="@+id/btn_infra"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/btn_water"
            android:layout_margin="@dimen/icon_margin_helpdesk"
            android:layout_toEndOf="@+id/btn_citizen_billing"
            android:tag="Infra Complaint"
            custom:caption_padding="@integer/caption_padding"
            custom:caption_text_size="@integer/caption_text_size"
            custom:icon_padding="@integer/icon_padding"
            custom:icon_text_size="@integer/icon_text_size"
            custom:selected="false"
            custom:text_caption="@string/txt_infra_complaints"
            custom:text_icon="@string/icon_infra">

        </com.simplysmart.providesk.custom.CustomButtonView>

        <com.simplysmart.providesk.custom.CustomButtonView
            android:id="@+id/btn_it"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/btn_cabletv"
            android:layout_margin="@dimen/icon_margin_helpdesk"
            android:layout_toStartOf="@+id/btn_other"
            android:tag="IT"
            custom:caption_padding="@integer/caption_padding"
            custom:caption_text_size="@integer/caption_text_size"
            custom:icon_padding="@integer/icon_padding"
            custom:icon_text_size="@integer/icon_text_size"
            custom:selected="false"
            custom:text_caption="@string/txt_it"
            custom:text_icon="@string/icon_it">

        </com.simplysmart.providesk.custom.CustomButtonView>


        <com.simplysmart.providesk.custom.CustomButtonView
            android:id="@+id/btn_other"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/btn_citizen_billing"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/icon_margin_helpdesk"
            android:tag="Others"
            custom:caption_padding="@integer/caption_padding"
            custom:caption_text_size="@integer/caption_text_size"
            custom:icon_padding="@integer/icon_padding"
            custom:icon_text_size="@integer/icon_text_size"
            custom:selected="false"
            custom:text_caption="@string/txt_others"
            custom:text_icon="@string/icon_others">

        </com.simplysmart.providesk.custom.CustomButtonView>

    </RelativeLayout>
</RelativeLayout>
