<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bw_color_white">

    <RelativeLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bw_color_white"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/ll_graph_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="15dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_for_bill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/bw_color_red"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:text="@string/title_graph_type_billing"
                android:textColor="@color/bw_color_white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/btn_for_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/bw_color_dark_gray"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:text="@string/title_graph_type_consumption"
                android:textColor="@color/bw_color_white"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/y_axis_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_graph_header"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/icon_electricity"
            android:textColor="@color/bw_color_black"
            android:textSize="25sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/ll_graph_footer"
            android:layout_below="@+id/y_axis_logo">

            <RelativeLayout
                android:id="@+id/graphLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/chart1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp" />

            </RelativeLayout>

            <include layout="@layout/custom_progress_dialog" />

            <include layout="@layout/custom_error_layout" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_graph_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_for_last"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/bw_color_dark_gray"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:paddingTop="5dp"
                android:text="This month"
                android:textColor="@color/bw_color_white"
                android:textSize="14sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/btn_for_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:background="@color/bw_color_dark_red"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:paddingTop="5dp"
                android:text="3M"
                android:textColor="@color/bw_color_white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/btn_for_six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:background="@color/bw_color_dark_gray"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:paddingTop="5dp"
                android:text="6M"
                android:textColor="@color/bw_color_white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/btn_for_twelve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:background="@color/bw_color_dark_gray"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:paddingTop="5dp"
                android:text="12M"
                android:textColor="@color/bw_color_white"
                android:textSize="14sp" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
