<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bw_color_white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bw_color_white"
        android:paddingBottom="15dp"
        android:paddingTop="15dp">

        <RelativeLayout
            android:id="@+id/header_btn_complaint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:background="@color/bw_color_white">

            <TextView
                android:id="@+id/btn_complaint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@color/bw_color_red"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:text="@string/txt_complaint"
                android:textColor="@color/bw_color_white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btn_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/btn_complaint"
                android:background="@color/bw_color_dark_gray"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:text="@string/txt_request"
                android:textColor="@color/bw_color_white"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_btn_complaint"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/category_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:textColor="@color/bw_color_red"
                android:textSize="28sp" />

            <Spinner
                android:id="@+id/subcategory_spinner"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/category_logo"
                android:dropDownWidth="200dp"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/unit_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:layout_toStartOf="@+id/unit_spinner"
                android:gravity="center"
                android:textColor="@color/bw_color_red"
                android:textSize="25sp" />

            <Spinner
                android:id="@+id/unit_spinner"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:dropDownWidth="120dp"
                android:spinnerMode="dropdown" />

        </RelativeLayout>

        <TextView
            android:id="@+id/line_seperator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/title_layout"
            android:layout_marginBottom="5dp"
            android:background="@color/bw_color_dark_gray" />

        <RelativeLayout
            android:id="@+id/ll_new_comment"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_below="@+id/line_seperator"
            android:layout_margin="15dp"
            android:background="@drawable/ractangular_border_gray"
            android:padding="5dp">

            <EditText
                android:id="@+id/edit_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:background="@android:color/transparent"
                android:hint="Type a message"
                android:maxLines="10"
                android:padding="8dp"
                android:textColor="@color/bw_color_black"
                android:textSize="16sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/ll_new_comment"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_one"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="centerCrop"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/img_two"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:scaleType="centerCrop"
                android:visibility="gone" />

            <TextView
                android:id="@+id/img_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/bw_color_black"
                android:textSize="22sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/btn_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="@color/bw_color_dark_gray"
                android:textSize="35sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/ll_new_comment"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/ractangular_border_red"
            android:paddingBottom="5dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:text="@string/txt_submit"
            android:textColor="@color/bw_color_red"
            android:textSize="16sp" />

    </RelativeLayout>
</ScrollView>